Fixed layout issue.

--- a/src/js/app.css
+++ b/src/js/app.css
@@ -71,4 +71,5 @@ iit-snake-cell > div {
 
 .iit-snake-row{
     height: 8px;
+    line-height: 0;
 }
